bug on mobile input square

--- a/wordle-helper/src/App.css
+++ b/wordle-helper/src/App.css
@@ -192,8 +192,12 @@ p {
     max-width: 55px;
   }
 
-  .letter {
-    font-size: 6vw;
+  .square input {
+    font-size: calc(7.5vw - 2px);
+    max-width: calc(15vw - 4px);
+    max-height: calc(15vw - 4px);
+    width: 100%;
+    height: 100%;
   }
 
   .instructions-container {
